[package]
name = "tonleh_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
hudsucker = "0.20.0"
tokio = { version = "1", features = ["full"] }
rustls-pemfile = "1.0.3"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
tera = "1.19.0"
actix-files = "0.6.2"
systemd-journal-logger = "1.0.0"
